[tool.poetry]
name = "fluentcst"
version = "0.1.0"
description = "Fluent libcst"
authors = ["Povilas Balciunas <povilas@argyle.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
libcst = "^0.4.1"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
