[tool.poetry]
name = "fluentcst"
version = "0.1.0"
description = "Fluent libcst"
authors = ["Povilas Balciunas <povilas@argyle.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
libcst = ">=0.4, <2"
typing-extensions = "^4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-clarity = "^1.0.1"
pytest-cov = "^5.0.0"
taskipy = "^1.14.1"
black = "^23.12.1"

[tool.taskipy.tasks]
test = "pytest --cov=fluentcst tests -vv"
check_types = "(npm list -g pyright@1.1.306 || npm install -g pyright@1.1.306) && pyright"
fmt = "black fluentcst tests"
check_fmt = "black --check ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
